--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="../Styles/style.css">
    <title>Desafio 04 - Codelândia</title>
 </head>
 
