:wrench: Nova interface adicionada

--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -5,8 +5,8 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="../Styles/style.css">
-   <title>Desafio 04 - Codelândia</title>
+   <link rel="stylesheet" href="../styles/login.css">
+   <title>Bem-vindo à RSys</title>
 </head>
 
 <body>
@@ -60,7 +60,7 @@
                <label for="remember">Lembrar de mim</label>
             </div>
             <div class="remember-psw">
-               <a href="#">Esqueceu sua senha ?</a>
+               <a href="">Esqueceu sua senha ?</a>
             </div>
          </div>
 
@@ -78,7 +78,7 @@
          </div>
 
          <div class="sign-up">
-            <p>Não tem uma conta? &nbsp; <a href="">Cadastre-se</a></p>
+            <p>Não tem uma conta? &nbsp; <a href="../pages/signUp.html">Cadastre-se</a></p>
          </div>
       </div>
    </div>
